lib/common-music/sa/include/sa.h

EXPORT SndWaveX *_wrap_new_SndWaveX (char *larg1, short larg2, short larg3, int larg4, short larg5, short larg6, SndObj **larg7, float larg8, int larg9, float larg10);
EXPORT void _wrap_delete_SndWaveX (SndWaveX *larg1);
EXPORT void _wrap_SndWaveX_GetHeader (SndWaveX *larg1, WAVEFORMATEXTENSIBLE *larg2);
EXPORT int _wrap_SndWaveX_GetChannelMask (SndWaveX *larg1);
EXPORT short _wrap_SndWaveX_Read (SndWaveX *larg1);
EXPORT short _wrap_SndWaveX_Write (SndWaveX *larg1);
EXPORT bool _wrap_SndWaveX_IsWaveExtensible (SndWaveX *larg1);
EXPORT SndPVOCEX *_wrap_new_SndPVOCEX (char *larg1, short larg2, int larg3, int larg4, short larg5, int larg6, short larg7, int larg8, SndObj **larg9, float larg10, int larg11, int larg12, float larg13);
EXPORT void _wrap_delete_SndPVOCEX (SndPVOCEX *larg1);
EXPORT int _wrap_SndPVOCEX_GetFFTSize (SndPVOCEX *larg1);
EXPORT int _wrap_SndPVOCEX_GetHopSize (SndPVOCEX *larg1);
EXPORT int _wrap_SndPVOCEX_GetWindowType (SndPVOCEX *larg1);
EXPORT int _wrap_SndPVOCEX_GetWindowLength (SndPVOCEX *larg1);
EXPORT void _wrap_SndPVOCEX_GetHeader (SndPVOCEX *larg1, WAVEFORMATPVOCEX *larg2);
EXPORT void _wrap_SndPVOCEX_SetTimePos (SndPVOCEX *larg1, float larg2);
EXPORT short _wrap_SndPVOCEX_Read (SndPVOCEX *larg1);
EXPORT short _wrap_SndPVOCEX_Write (SndPVOCEX *larg1);
EXPORT bool _wrap_SndPVOCEX_IsPvocex (SndPVOCEX *larg1);
EXPORT SndSinIO *_wrap_new_SndSinIO (char *larg1, int larg2, float larg3, int larg4, short larg5, short larg6, int larg7, short larg8, int larg9, SndObj **larg10, float larg11, int larg12, int larg13, float larg14);
EXPORT void _wrap_delete_SndSinIO (SndSinIO *larg1);
EXPORT short _wrap_SndSinIO_Write (SndSinIO *larg1);
EXPORT short _wrap_SndSinIO_Read (SndSinIO *larg1);
EXPORT int _wrap_SndSinIO_GetTrackID (SndSinIO *larg1, int larg2, int larg3);
EXPORT int _wrap_SndSinIO_GetTracks (SndSinIO *larg1, int larg2);
EXPORT int _wrap_SndSinIO_GetFFTSize (SndSinIO *larg1);
EXPORT int _wrap_SndSinIO_GetHopSize (SndSinIO *larg1);
EXPORT int _wrap_SndSinIO_GetWindowType (SndSinIO *larg1);
EXPORT int _wrap_SndSinIO_GetMaxTracks (SndSinIO *larg1);
EXPORT void _wrap_SndSinIO_GetHeader (SndSinIO *larg1, WAVEFORMATSINUSEX *larg2);
EXPORT void _wrap_SndSinIO_SetTimePos (SndSinIO *larg1, float larg2);
EXPORT bool _wrap_SndAiff_IsAiff (SndAiff *larg1);
EXPORT SndAiff *_wrap_new_SndAiff (char *larg1, short larg2, short larg3, short larg4, SndObj **larg5, float larg6, int larg7, float larg8);
EXPORT void _wrap_delete_SndAiff (SndAiff *larg1);
EXPORT short _wrap_SndAiff_Read (SndAiff *larg1);
EXPORT short _wrap_SndAiff_Write (SndAiff *larg1);
EXPORT char *_wrap_SndAiff_ErrorMessage (SndAiff *larg1);
EXPORT SndBuffer *_wrap_new_SndBuffer (short larg1, int larg2, SndObj **larg3, int larg4, float larg5);
EXPORT void _wrap_delete_SndBuffer (SndBuffer *larg1);
EXPORT short _wrap_SndBuffer_Write (SndBuffer *larg1);
EXPORT short _wrap_SndBuffer_Read (SndBuffer *larg1);
EXPORT char *_wrap_SndBuffer_ErrorMessage (SndBuffer *larg1);
EXPORT void _wrap_HarmTable_SetHarm (HarmTable *larg1, int larg2, int larg3);
EXPORT char *_wrap_HarmTable_ErrorMessage (HarmTable *larg1);
EXPORT short _wrap_HarmTable_MakeTable (HarmTable *larg1);
EXPORT HarmTable *_wrap_new_HarmTable_empty ();
EXPORT void _wrap_HarmTable_SetPhase (HarmTable *larg1, float larg2);
EXPORT HarmTable *_wrap_new_HarmTable (long larg1, int larg2, int larg3, float larg4);
EXPORT void _wrap_delete_HarmTable (HarmTable *larg1);
EXPORT void _wrap_UsrHarmTable_SetHarm (UsrHarmTable *larg1, int larg2, float *larg3);
EXPORT char *_wrap_UsrHarmTable_ErrorMessage (UsrHarmTable *larg1);
EXPORT short _wrap_UsrHarmTable_MakeTable (UsrHarmTable *larg1);
EXPORT UsrHarmTable *_wrap_new_UsrHarmTable_empty ();
EXPORT UsrHarmTable *_wrap_new_UsrHarmTable (long larg1, int larg2, float *larg3);
EXPORT void _wrap_delete_UsrHarmTable (UsrHarmTable *larg1);
EXPORT void _wrap_TrisegTable_SetCurve (TrisegTable *larg1, float larg2, float larg3, float larg4, float larg5, float larg6, float larg7, float larg8, float larg9);
EXPORT void _wrap_TrisegTable_SetCurve_points (TrisegTable *larg1, float *larg2, float larg3);
EXPORT char *_wrap_TrisegTable_ErrorMessage (TrisegTable *larg1);
EXPORT short _wrap_TrisegTable_MakeTable (TrisegTable *larg1);
EXPORT TrisegTable *_wrap_new_TrisegTable_empty ();
EXPORT TrisegTable *_wrap_new_TrisegTable (long larg1, float larg2, float larg3, float larg4, float larg5, float larg6, float larg7, float larg8, float larg9);
EXPORT TrisegTable *_wrap_new_TrisegTable_points (long larg1, float *larg2, float larg3);
EXPORT void _wrap_delete_TrisegTable (TrisegTable *larg1);
EXPORT void _wrap_EnvTable_SetEnvelope (EnvTable *larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6);
EXPORT char *_wrap_EnvTable_ErrorMessage (EnvTable *larg1);
EXPORT short _wrap_EnvTable_MakeTable (EnvTable *larg1);
EXPORT EnvTable *_wrap_new_EnvTable_empty ();
EXPORT EnvTable *_wrap_new_EnvTable (long larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6);
EXPORT void _wrap_delete_EnvTable (EnvTable *larg1);
EXPORT void _wrap_SndTable_SetInput (SndTable *larg1, long larg2, SndFIO *larg3, short larg4);
EXPORT char *_wrap_SndTable_ErrorMessage (SndTable *larg1);
EXPORT short _wrap_SndTable_MakeTable (SndTable *larg1);
EXPORT SndTable *_wrap_new_SndTable_empty ();
EXPORT SndTable *_wrap_new_SndTable (long larg1, SndFIO *larg2, short larg3);
EXPORT void _wrap_delete_SndTable (SndTable *larg1);
EXPORT void _wrap_PlnTable_SetPln (PlnTable *larg1, int larg2, double *larg3, float larg4);
EXPORT char *_wrap_PlnTable_ErrorMessage (PlnTable *larg1);
EXPORT short _wrap_PlnTable_MakeTable (PlnTable *larg1);
EXPORT PlnTable *_wrap_new_PlnTable_empty ();
EXPORT PlnTable *_wrap_new_PlnTable (long larg1, int larg2, double *larg3, float larg4);
EXPORT void _wrap_delete_PlnTable (PlnTable *larg1);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);