lib/common-music/sa/cffi-sa.lisp


(defconstant SPEAKER_LOW_FREQUENCY #x8)

(defconstant SPEAKER_BACK_LEFT #x10)

(defconstant SPEAKER_BACK_RIGHT #x20)

(defconstant SPEAKER_FRONT_LEFT_OF_CENTER #x40)

(defconstant SPEAKER_FRONT_RIGHT_OF_CENTER #x80)

(defconstant SPEAKER_BACK_CENTER #x100)

(defconstant SPEAKER_SIDE_LEFT #x200)

(defconstant SPEAKER_SIDE_RIGHT #x400)

(defconstant SPEAKER_TOP_CENTER #x800)

(defconstant SPEAKER_TOP_FRONT_LEFT #x1000)

(defconstant SPEAKER_TOP_FRONT_CENTER #x2000)

(defconstant SPEAKER_TOP_FRONT_RIGHT #x4000)

(defconstant SPEAKER_TOP_BACK_LEFT #x8000)

(defconstant SPEAKER_TOP_BACK_CENTER #x10000)

(defconstant SPEAKER_TOP_BACK_RIGHT #x20000)

(defconstant SPEAKER_RESERVED #x80000000)

(defcstruct GUID
	(Data1 :int)
	(Data2 :short)
	(Data3 :short)
	(Data4 :pointer))

(defcstruct wav_ex
	(wValidBitsPerSample :short)
	(dwChannelMask :int)
	(SubFormat :pointer))

(defcstruct WAVEFORMATEXTENSIBLE
	(waveformatex :pointer)
	(waveformat_ext :pointer))

(defcfun ("_wrap_new_SndWaveX" new_SndWaveX) :sndobj_sndwavex
  (name :string)
  (mode :short)
  (channels :short)
  (channelmask :int)
  (bits :short)
  (format :short)
  (inputlist :pointer)
  (spos :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndWaveX" delete_SndWaveX) :void
  (self :sndobj_sndwavex))

(defcfun ("_wrap_SndWaveX_GetHeader" SndWaveX_GetHeader) :void
  (self :sndobj_sndwavex)
  (pheader :pointer))

(defcfun ("_wrap_SndWaveX_GetChannelMask" SndWaveX_GetChannelMask) :int
  (self :sndobj_sndwavex))

(defcfun ("_wrap_SndWaveX_Read" SndWaveX_Read) :short
  (self :sndobj_sndwavex))

(defcfun ("_wrap_SndWaveX_Write" SndWaveX_Write) :short
  (self :sndobj_sndwavex))

(defcfun ("_wrap_SndWaveX_IsWaveExtensible" SndWaveX_IsWaveExtensible) :boolean
  (self :sndobj_sndwavex))

(defcstruct pvoc_data
	(wWordFormat :short)
	(wAnalFormat :short)
	(wSourceFormat :short)
	(wWindowType :short)
	(nAnalysisBins :int)
	(dwWinlen :int)
	(dwOverlap :int)
	(dwFrameAlign :int)
	(fAnalysisRate :float)
	(fWindowParam :float))

(defcstruct pvocex
	(dwVersion :int)
	(dwDataSize :int)
	(data :pointer))
#|
(defcenum pvoc_datatype
	:IEEE_FLOAT_T
	:IEEE_DOUBLE_T)

(defcenum pvoc_frametype
	(:PVOC_AMP_FREQ 0)
	:PVOC_AMP_PHASE
	:PVOC_COMPLEX)

(defcenum pvoc_windowtype
	(:DEFAULT 0)
	:HAMMING
	:HANNING
	:KAISER
	:RECTANGULAR
	:CUSTOM)
|#
(defcstruct WAVEFORMATPVOCEX
	(waveformatex :pointer)
	(waveformat_ext :pointer)
	(pvocformat_ext :pointer))

(defcfun ("_wrap_new_SndPVOCEX" new_SndPVOCEX) :sndobj_sndpvocex
  (name :string)
  (mode :short)
  (analformat :int)
  (windowtype :int)
  (channels :short)
  (channelmask :int)
  (bits :short)
  (format :int)
  (inputlist :pointer)
  (framepos :float)
  (hopsize :int)
  (fftsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndPVOCEX" delete_SndPVOCEX) :void
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_GetFFTSize" SndPVOCEX_GetFFTSize) :int
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_GetHopSize" SndPVOCEX_GetHopSize) :int
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_GetWindowType" SndPVOCEX_GetWindowType) :int
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_GetWindowLength" SndPVOCEX_GetWindowLength) :int
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_GetHeader" SndPVOCEX_GetHeader) :void
  (self :sndobj_sndpvocex)
  (pheader :pointer))

(defcfun ("_wrap_SndPVOCEX_SetTimePos" SndPVOCEX_SetTimePos) :void
  (self :sndobj_sndpvocex)
  (pos :float))

(defcfun ("_wrap_SndPVOCEX_Read" SndPVOCEX_Read) :short
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_Write" SndPVOCEX_Write) :short
  (self :sndobj_sndpvocex))

(defcfun ("_wrap_SndPVOCEX_IsPvocex" SndPVOCEX_IsPvocex) :boolean
  (self :sndobj_sndpvocex))

(defcstruct sinus_data
	(wWordFormat :short)
	(wHopsize :short)
	(wWindowType :short)
	(wMaxtracks :short)
	(dwWindowSize :int)
	(fThreshold :float)
	(fAnalysisRate :float))

(defcstruct sinusex
	(dwVersion :int)
	(data :pointer))

(defcstruct WAVEFORMATSINUSEX
	(waveformatex :pointer)
	(waveformat_ext :pointer)
	(sinusformat_ext :pointer))

(defcfun ("_wrap_new_SndSinIO" new_SndSinIO) :sndobj_sndsinio
  (name :string)
  (maxtracks :int)
  (threshold :float)
  (windowtype :int)
  (mode :short)
  (channels :short)
  (channelmask :int)
  (bits :short)
  (format :int)
  (inputlist :pointer)
  (framepos :float)
  (hopsize :int)
  (fftsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndSinIO" delete_SndSinIO) :void
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_Write" SndSinIO_Write) :short
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_Read" SndSinIO_Read) :short
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_GetTrackID" SndSinIO_GetTrackID) :int
  (self :sndobj_sndsinio)
  (track :int)
  (channel :int))

(defcfun ("_wrap_SndSinIO_GetTracks" SndSinIO_GetTracks) :int
  (self :sndobj_sndsinio)
  (channel :int))

(defcfun ("_wrap_SndSinIO_GetFFTSize" SndSinIO_GetFFTSize) :int
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_GetHopSize" SndSinIO_GetHopSize) :int
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_GetWindowType" SndSinIO_GetWindowType) :int
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_GetMaxTracks" SndSinIO_GetMaxTracks) :int
  (self :sndobj_sndsinio))

(defcfun ("_wrap_SndSinIO_GetHeader" SndSinIO_GetHeader) :void
  (self :sndobj_sndsinio)
  (pheader :pointer))

(defcfun ("_wrap_SndSinIO_SetTimePos" SndSinIO_SetTimePos) :void
  (self :sndobj_sndsinio)
  (pos :float))

(defcstruct CkHdr
	(ckID :unsigned-long)
	(ckSize :long))

(defcstruct FormHdr
	(ckHdr :pointer)
	(formType :unsigned-long))

(defcstruct CommChunk1
	(ckHdr :pointer)
	(numChannels :short))

(defcstruct CommChunk2
	(numSampleFrames :long)
	(sampleSize :short)
	(sampleRate :pointer))

(defcstruct Loop
	(playMode :short)
	(beginLoop :short)
	(endLoop :short))

(defcstruct InstrChunk
	(ckHdr :pointer)
	(baseNote :char)
	(detune :char)
	(lowNote :char)
	(highNote :char)
	(lowVelocity :char)
	(highVelocity :char)
	(gain :short)
	(sustainLoop :sndobj_loop)
	(releaseLoop :sndobj_loop))

(defcstruct SoundDataHdr
	(ckHdr :pointer)
	(offset :long)
	(blockSize :long))

(defcstruct aiff_head
	(ckID1 :unsigned-long)
	(ckSize1 :long)
	(formType :unsigned-long)
	(ckID2 :unsigned-long)
	(ckSize2 :long)
	(nchns :short)
	(numSampleFrames :long)
	(size :short)
	(rate :long))

(defcfun ("_wrap_SndAiff_IsAiff" SndAiff_IsAiff) :boolean
  (self :sndobj_sndaiff))

(defcfun ("_wrap_new_SndAiff" new_SndAiff) :sndobj_sndaiff
  (name :string)
  (mode :short)
  (channels :short)
  (bits :short)
  (inputlist :pointer)
  (spos :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndAiff" delete_SndAiff) :void
  (self :sndobj_sndaiff))

(defcfun ("_wrap_SndAiff_Read" SndAiff_Read) :short
  (self :sndobj_sndaiff))

(defcfun ("_wrap_SndAiff_Write" SndAiff_Write) :short
  (self :sndobj_sndaiff))

(defcfun ("_wrap_SndAiff_ErrorMessage" SndAiff_ErrorMessage) :string
  (self :sndobj_sndaiff))

(defcfun ("_wrap_new_SndBuffer" new_SndBuffer) :sndobj_sndbuffer
  (channels :short)
  (buffsize :int)
  (inputlist :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndBuffer" delete_SndBuffer) :void
  (self :sndobj_sndbuffer))

(defcfun ("_wrap_SndBuffer_Write" SndBuffer_Write) :short
  (self :sndobj_sndbuffer))

(defcfun ("_wrap_SndBuffer_Read" SndBuffer_Read) :short
  (self :sndobj_sndbuffer))

(defcfun ("_wrap_SndBuffer_ErrorMessage" SndBuffer_ErrorMessage) :string
  (self :sndobj_sndbuffer))

(defcfun ("_wrap_HarmTable_SetHarm" HarmTable_SetHarm) :void
  (self :sndobj_harmtable)
  (harm :int)
  (type :int))

(defcfun ("_wrap_HarmTable_ErrorMessage" HarmTable_ErrorMessage) :string
  (self :sndobj_harmtable))

(defcfun ("_wrap_HarmTable_MakeTable" HarmTable_MakeTable) :short
  (self :sndobj_harmtable))

(defcfun ("_wrap_new_HarmTable_empty" new_HarmTable_empty) :sndobj_harmtable)

(defcfun ("_wrap_HarmTable_SetPhase" HarmTable_SetPhase) :void
  (self :sndobj_harmtable)
  (phase :float))

(defcfun ("_wrap_new_HarmTable" new_HarmTable) :sndobj_harmtable
  (L :long)
  (harm :int)
  (type :int)
  (phase :float))

(defcfun ("_wrap_delete_HarmTable" delete_HarmTable) :void
  (self :sndobj_harmtable))

(defcfun ("_wrap_UsrHarmTable_SetHarm" UsrHarmTable_SetHarm) :void
  (self :sndobj_usrharmtable)
  (harm :int)
  (amps :float*))

(defcfun ("_wrap_UsrHarmTable_ErrorMessage" UsrHarmTable_ErrorMessage) :string
  (self :sndobj_usrharmtable))

(defcfun ("_wrap_UsrHarmTable_MakeTable" UsrHarmTable_MakeTable) :short
  (self :sndobj_usrharmtable))

(defcfun ("_wrap_new_UsrHarmTable_empty" new_UsrHarmTable_empty) :sndobj_usrharmtable)

(defcfun ("_wrap_new_UsrHarmTable" new_UsrHarmTable) :sndobj_usrharmtable
  (L :long)
  (harm :int)
  (amps :float*))

(defcfun ("_wrap_delete_UsrHarmTable" delete_UsrHarmTable) :void
  (self :sndobj_usrharmtable))

(defcfun ("_wrap_TrisegTable_SetCurve" TrisegTable_SetCurve) :void
  (self :sndobj_trisegtable)
  (init :float)
  (seg1 :float)
  (p1 :float)
  (seg2 :float)
  (p2 :float)
  (seg3 :float)
  (fin :float)
  (type :float))

(defcfun ("_wrap_TrisegTable_SetCurve_points" TrisegTable_SetCurve_points) :void
  (self :sndobj_trisegtable)
  (TSPoints :float*)
  (type :float))

(defcfun ("_wrap_TrisegTable_ErrorMessage" TrisegTable_ErrorMessage) :string
  (self :sndobj_trisegtable))

(defcfun ("_wrap_TrisegTable_MakeTable" TrisegTable_MakeTable) :short
  (self :sndobj_trisegtable))

(defcfun ("_wrap_new_TrisegTable_empty" new_TrisegTable_empty) :sndobj_trisegtable)

(defcfun ("_wrap_new_TrisegTable" new_TrisegTable) :sndobj_trisegtable
  (L :long)
  (init :float)
  (seg1 :float)
  (p1 :float)
  (seg2 :float)
  (p2 :float)
  (seg3 :float)
  (fin :float)
  (type :float))

(defcfun ("_wrap_new_TrisegTable_points" new_TrisegTable_points) :sndobj_trisegtable
  (L :long)
  (TSPoints :float*)
  (type :float))

(defcfun ("_wrap_delete_TrisegTable" delete_TrisegTable) :void
  (self :sndobj_trisegtable))

(defcfun ("_wrap_EnvTable_SetEnvelope" EnvTable_SetEnvelope) :void
  (self :sndobj_envtable)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float))

(defcfun ("_wrap_EnvTable_ErrorMessage" EnvTable_ErrorMessage) :string
  (self :sndobj_envtable))

(defcfun ("_wrap_EnvTable_MakeTable" EnvTable_MakeTable) :short
  (self :sndobj_envtable))

(defcfun ("_wrap_new_EnvTable_empty" new_EnvTable_empty) :sndobj_envtable)

(defcfun ("_wrap_new_EnvTable" new_EnvTable) :sndobj_envtable
  (L :long)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float))

(defcfun ("_wrap_delete_EnvTable" delete_EnvTable) :void
  (self :sndobj_envtable))

(defcfun ("_wrap_SndTable_SetInput" SndTable_SetInput) :void
  (self :sndobj_sndtable)
  (L :long)
  (input :sndobj_sndfio)
  (channel :short))

(defcfun ("_wrap_SndTable_ErrorMessage" SndTable_ErrorMessage) :string
  (self :sndobj_sndtable))

(defcfun ("_wrap_SndTable_MakeTable" SndTable_MakeTable) :short
  (self :sndobj_sndtable))

(defcfun ("_wrap_new_SndTable_empty" new_SndTable_empty) :sndobj_sndtable)

(defcfun ("_wrap_new_SndTable" new_SndTable) :sndobj_sndtable
  (L :long)
  (input :sndobj_sndfio)
  (channel :short))

(defcfun ("_wrap_delete_SndTable" delete_SndTable) :void
  (self :sndobj_sndtable))

(defcfun ("_wrap_PlnTable_SetPln" PlnTable_SetPln) :void
  (self :sndobj_plntable)
  (order :int)
  (coefs :double*)
  (range :float))

(defcfun ("_wrap_PlnTable_ErrorMessage" PlnTable_ErrorMessage) :string
  (self :sndobj_plntable))

(defcfun ("_wrap_PlnTable_MakeTable" PlnTable_MakeTable) :short
  (self :sndobj_plntable))

(defcfun ("_wrap_new_PlnTable_empty" new_PlnTable_empty) :sndobj_plntable)

(defcfun ("_wrap_new_PlnTable" new_PlnTable) :sndobj_plntable
  (L :long)
  (order :int)
  (coefs :double*)
  (range :float))

(defcfun ("_wrap_delete_PlnTable" delete_PlnTable) :void
  (self :sndobj_plntable))
